security-groups.tf
# front security group
resource "aws_security_group" "frontend" {
  name_prefix = "${local.team}-${var.environment}-frontend-sg"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.required_tags,
    {
      SERVICE_NAME = "frontend"
    }
  )
}

# micro security group
resource "aws_security_group" "micro" {
  name_prefix = "${local.team}-${var.environment}-micro-sg"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.required_tags,
    {
      SERVICE_NAME = "micro-01-02"
    }
  )
}
